# fifa

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  package.json  requirements.txt
.github/workflows/: ci.yml
api/: index.py
backend/: pyproject.toml  requirements.txt  scratch_debug.py
backend/app/: __init__.py  config.py  deps.py  main.py  models.py  rate_limit.py
backend/app/advisor/: __init__.py  gemini.py  rules.py
backend/app/advisor/prompts/: v1.yaml
backend/app/crowd/: __init__.py  simulator.py
backend/app/repository/: __init__.py  base.py  firestore_repo.py  memory_repo.py
backend/app/routes/: __init__.py  chat.py  crowd.py  health.py  ops.py
backend/app/stadium/: __init__.py  constants.py  zones.py
backend/tests/: __init__.py  conftest.py  test_advisor.py  test_api.py  test_crowd_engine.py  test_firestore.py  test_gemini.py  test_models.py  test_stadium.py
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/e2e/: calculator.spec.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/components/: AlertBadge.tsx  CrowdHeatmap.test.tsx  CrowdHeatmap.tsx  FanAssistant.test.tsx  FanAssistant.tsx  LanguageSelector.tsx  OpsPanel.test.tsx  OpsPanel.tsx  VenueNavigator.test.tsx  VenueNavigator.tsx
frontend/src/hooks/: useCrowdData.ts  useOpsActions.ts  useStadiumChat.ts
frontend/src/lib/: api.test.ts  api.ts  deviceId.ts  format.test.ts  format.ts  types.ts
(+3 files in other folders)
